 ! UnitDestroyed is now called twice and gets an extra argument 'preEvent'
   the value of preEvent is true for the first call which corresponds to
   the old UnitDestroyed and false for the second (allows shaders during
   death anims, etc; after the second call a unitID is no longer valid!)
   also remove hardcoded logic to zombify (stun+immobilize) a unit on death
 ! gl.UnitShape and gl.FeatureShape now set their relevant GL state internally
   (so calling only these functions is enough to get correctly rendered models;
   pass in 'false' for the [new] third argument to get the fixed behavior, omit
   it or pass in 'true' [default] to render with your own custom state instead)
 - new Spring.GetUICommands function to obtain a list of all UI commands (e.g. /luaui reload)
 - new VFS.CalculateHash function that calculates hash (in base64 form) of a given string (with md5 support initially)
 - new Spring.SetFeatureFade(featureID, bool) to control whether a feature will fade or not when zoomed out.

 - add callouts (see their Unit equivalents for documentation)
     Spring.{Get,Set}FeatureRotation 
     Spring.{Get,Set}FeaturePieceCollisionVolumeData
     Spring.GetFeatureLastAttackedPiece
     Spring.GetFeaturePieceMap
     Spring.GetFeaturePieceList
     Spring.GetFeaturePieceInfo
     Spring.GetFeaturePiecePosition
     Spring.GetFeaturePieceDirection
     Spring.GetFeaturePiecePosDir
     Spring.GetFeaturePieceMatrix

     Spring.SetFeatureNoDraw
     Spring.GetFeatureNoDraw

     gl.FeatureRaw
     gl.FeatureMultMatrix
     gl.FeaturePiece
     gl.FeaturePieceMatrix
     gl.FeaturePieceMultMatrix

 - add Spring.FeatureRendering API; allows custom shaders (technically,
   materials) for features as its Spring.UnitRendering counterpart does
   for units
   note: the following two functions exist but are no-ops
     Spring.UnitRendering.SetFeatureLuaDraw
     Spring.FeatureRendering.SetUnitLuaDraw

 - add unsynced callout SetSkyBoxTexture(string texName) -> nil