@@ -228,7 +228,9 @@ class LuaOpenGL {
 
 		static int Unit(lua_State* L);
 		static int UnitRaw(lua_State* L);
+		static int UnitTextures(lua_State* L);
 		static int UnitShape(lua_State* L);
+		static int UnitShapeTextures(lua_State* L);
 		static int UnitMultMatrix(lua_State* L);
 		static int UnitPiece(lua_State* L);
 		static int UnitPieceMatrix(lua_State* L);
@@ -239,7 +241,9 @@ class LuaOpenGL {
 
 		static int Feature(lua_State* L);
 		static int FeatureRaw(lua_State* L);
+		static int FeatureTextures(lua_State* L);
 		static int FeatureShape(lua_State* L);
+		static int FeatureShapeTextures(lua_State* L);
 		static int FeatureMultMatrix(lua_State* L);
 		static int FeaturePiece(lua_State* L);
 		static int FeaturePieceMatrix(lua_State* L);
